--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>BEC- The Best Class to Enroll for Exchange</title>
-  <meta name="title" content="EduWeb - The Best Program to Enroll for Exchange">
-  <meta name="description" content="This is an education html template made by codewithsadee">
+  <meta name="title" content="BEC - The Best Program to Enroll for Exchange">
+  <meta name="description" content="This is an education html template made by Red Rivers Labs">
 
   
   <link rel="shortcut icon" href="./logo.jpeg" type="image/jpeg">
